2019-10-23 Wiley E. Hill <wileyhill@gmail.com>

    * gattrib/src/s_object.c: Reduce scope of pointers old_attrib_text and
      old_attrib_nam in s_object_replace_attrib_in_object, factor releasing
      old_attrib_text from both clause of conditional.

    * src/s_toplevel.c: Remove s_toplevel_update_pin_attribs_in_toplevel
      entry debug output.

    * src/x_menus.c: Replace g_object_ref with g_object_ref_sink.

    * src/x_window.c: Replace g_object_ref with g_object_ref_sink.

2019-09-18 Wiley E. Hill <wileyhill@gmail.com>

    * include/gtksheet/gtkcompat.h: Define gdk_gc_destroy when not defined.

    * src/gtksheet/gtkitementry.c: Substitute gdk_window_get_height in place
      of gdk_window_get_size.

    * src/gtksheet/gtksheet.c: Simplfy gtk_sheet_get_entry. Conditionally
      compile calls to GDK_THREADS_ENTER and GDK_THREADS_LEAVE in function
      gtk_sheet_flash and _gtk_sheet_scroll_to_pointer. Add macro/function
      _gtk_sheet_draw_pixmap and conditionally replace gdk_draw_pixmap.

    * src/gattrib.c: Replace gdk_set_locale with setlocale to initialize
      the locale based on environment variables.

2019-09-16 Wiley E. Hill <wileyhill@gmail.com>

    * src/x_gtksheet.c: Remove unused function change_entry. Replace cast
       to GtkSignalFunc with GCallback.

    * src/x_toolbars.c: Include geda_gtk_compat.h.

2019-09-13 Wiley E. Hill <wileyhill@gmail.com>

    * gtksheet/gtkcompat.h: Define gdk_cursor_destroy when not defined.

2019-09-12 Wiley E. Hill <wileyhill@gmail.com>

    * src/gtksheet/gtksheet.c: Reduce scope of GtkTableChild and GtkBoxChild,
      replace dynamic cast with static cast to GtkWidget, and utilize
      gtk_container_get_children in function gtk_sheet_get_entry.

    * src/x_dialog.c: Remove call to deprecated gtk_window_position in
      x_dialog_column_visibility.

    * src/x_gtksheet.c: Remove GtkSignalFunc cast in SetupCSheetHandlers.

2019-09-11 Wiley E. Hill <wileyhill@gmail.com>
