@@ -1,3 +1,8 @@
+2019-10-24 Wiley E. Hill <wileyhill@gmail.com>
+
+    * src/x_window.c: Revamp x_window_blank_document to eliminate accessing
+      structure members directly.
+
 2019-10-23 Wiley E. Hill <wileyhill@gmail.com>
 
     * gattrib/src/s_object.c: Reduce scope of pointers old_attrib_text and
